--- a/Frontend/Homepage/index.html
+++ b/Frontend/Homepage/index.html
@@ -157,7 +157,7 @@
                             </div>
                         </div>
                         <!-- Sec2 -->
-                         <div class="app__calender-item-wp">
+                        <div class="app__calender-item-wp">
                             <div class="app__calender-item-img-wp">
                                 <img src="..\img\movies1.jpg" alt="movies" class="app__calender-item-img">
                             </div>
@@ -175,7 +175,8 @@
                             </div>
                         </div>
 
-                        
+
+
                     </div>
 
                 </div>
@@ -188,56 +189,92 @@
     <div class="footer__wp"></div>
     <!--Script-->
     <script>
-    document.addEventListener('DOMContentLoaded', function () {
-        const locationItems = document.querySelectorAll('.app__cinema-location-list-items');
-        const cinemaItem = document.querySelector('.app__cinema-item');
-        const calendar = document.querySelector('.app__calender');
-        const cinemaListItems = document.querySelectorAll('.app__cinema-item-list-items');
-       
-        // Ẩn rạp & lịch chiếu ban đầu
-        cinemaItem.style.display = 'none';
-        calendar.style.display = 'none';
+        document.addEventListener('DOMContentLoaded', function () {
+            const locationItems = document.querySelectorAll('.app__cinema-location-list-items');
+            const cinemaItem = document.querySelector('.app__cinema-item');
+            const calendar = document.querySelector('.app__calender');
+            const cinemaListItems = document.querySelectorAll('.app__cinema-item-list-items');
 
-        // Click vào khu vực
-        locationItems.forEach(location => {
-            location.addEventListener('click', function () {
-                // Bỏ active các khu vực khác
-                locationItems.forEach(i => i.classList.remove('active'));
-                this.classList.add('active');
+            // Ẩn rạp & lịch chiếu ban đầu
+            cinemaItem.style.display = 'none';
+            calendar.style.display = 'none';
 
-                // Hiện rạp, ẩn lịch
-                cinemaItem.style.display = 'block';
-                calendar.style.display = 'none';
+            // Click vào khu vực
+            locationItems.forEach(location => {
+                location.addEventListener('click', function () {
+                    // Bỏ active các khu vực khác
+                    locationItems.forEach(i => i.classList.remove('active'));
+                    this.classList.add('active');
 
-                // Bỏ chọn rạp trước đó
-                cinemaListItems.forEach(i => i.classList.remove('active'));
+                    // Hiện rạp, ẩn lịch
+                    cinemaItem.style.display = 'block';
+                    calendar.style.display = 'none';
+
+                    // Bỏ chọn rạp trước đó
+                    cinemaListItems.forEach(i => i.classList.remove('active'));
+                });
             });
-        });
 
-        // Click vào rạp
-        cinemaListItems.forEach(cinema => {
-            cinema.addEventListener('click', function () {
-                // Bỏ active các rạp khác
-                cinemaListItems.forEach(i => i.classList.remove('active'));
-                this.classList.add('active');
+            // Click vào rạp
+            cinemaListItems.forEach(cinema => {
+                cinema.addEventListener('click', function () {
+                    // Bỏ active các rạp khác
+                    cinemaListItems.forEach(i => i.classList.remove('active'));
+                    this.classList.add('active');
 
-                // Hiện lịch chiếu
-                calendar.style.display = 'block';
+                    // Hiện lịch chiếu
+                    calendar.style.display = 'block';
+                });
             });
-        });
-        //Click vao time
-        const timeSlots = document.querySelectorAll('.app__calender-items-time');
+            //Click vao time
+            const timeSlots = document.querySelectorAll('.app__calender-items-time');
 
-        timeSlots.forEach(slot => {
-            slot.addEventListener('click', function () {
-                // Bỏ active tất cả
-                timeSlots.forEach(i => i.classList.remove('active'));
-                // Gán active cho cái được click
-                this.classList.add('active');
+            timeSlots.forEach(slot => {
+                slot.addEventListener('click', function () {
+                    // Bỏ active tất cả
+                    timeSlots.forEach(i => i.classList.remove('active'));
+                    // Gán active cho cái được click
+                    this.classList.add('active');
+                });
             });
+            // Các phần cần ẩn
+            const dateItems = document.querySelectorAll('.app__calender-date-items');
+            const note = document.querySelector('.app__calender-note');
+            const title = document.querySelector('.app__calender-title');
+            const item = document.querySelector('.app__calender-item');
+            const dateTextEl = document.querySelector('.app__calender-title-date-date');
+
+            // Mảng thứ
+            const days = ['Chủ Nhật', 'Thứ 2', 'Thứ 3', 'Thứ 4', 'Thứ 5', 'Thứ 6', 'Thứ 7'];
+
+            dateItems.forEach(date => {
+                date.addEventListener('click', function () {
+                    // Bỏ active các ngày khác
+                    dateItems.forEach(i => i.classList.remove('active'));
+                    this.classList.add('active');
+
+                    // Hiện phần bên dưới
+                    note.style.display = 'block';
+                    title.style.display = 'block';
+                    item.style.display = 'flex';
+
+                    // Lấy ngày từ text (VD: "06/8") và tạo Date object
+                    const dayMonth = this.textContent.trim().split('/');
+                    const day = parseInt(dayMonth[0]);
+                    const month = parseInt(dayMonth[1]) - 1; // Tháng JS bắt đầu từ 0
+                    const year = 2025;
+
+                    const dateObj = new Date(year, month, day);
+                    const weekday = days[dateObj.getDay()];
+
+                    // Định dạng ngày để hiển thị
+                    const fullText = `${weekday}, ${day.toString().padStart(2, '0')}/${(month + 1).toString().padStart(2, '0')}/${year}`;
+                    dateTextEl.textContent = fullText;
+                });
+            });
+
         });
-    });
-</script>
+    </script>
 
 
 </body>
