--- a/Frontend/Homepage/index.html
+++ b/Frontend/Homepage/index.html
@@ -16,7 +16,17 @@
         <div class="header__nav__wp">
             <div class="navbar">
                 <div class="nav__items" style="color: #c86877;">Lotto</div>
-                <div class="nav__items"><a href="..\News2\new2.html" class="nav__items-link">Tin tức</a></div>
+
+                <div class="nav__items dropdown">
+                    <a href="#" class="nav__items-link">Tin tức</a>
+                    <div class="dropdown-content">
+                        <a href="..\News1\new1.html">Tin điện ảnh</a>
+                        <a href="..\News2\new2.html">Đánh giá phim</a>
+                    </div>
+                </div>
+
+
+
                 <div class="nav__items"><a href="../Checkout/book.html" class="nav__items-link">Thanh Toán</a>
                 </div>
                 <div class="nav__logo"></div>
