fix + create form backend

--- a/Frontend/Homepage/index.html
+++ b/Frontend/Homepage/index.html
@@ -37,7 +37,7 @@
             </div>
             <div class="nav__login">
                 <i class="fa-regular fa-user nav__login-icon"></i>
-                <a href="" class="nav__login-txt">Login</a>
+                <a href="..\Sign up\giaodien.html" class="nav__login-txt">Login</a>
             </div>
         </div>
     </header>
