--- a/Frontend/Sign up/giaodien.html
+++ b/Frontend/Sign up/giaodien.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Đăng Ký Tài Khoản</title>
-  <link rel="stylesheet" href="Sign up\makeup.css">
+  <link rel="stylesheet" href="makeup.css">
+  <link rel="stylesheet" href="xulydulieu.js">
 </head>
 <body>
   <div class="container">
