--- a/Frontend/Checkout/book.html
+++ b/Frontend/Checkout/book.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="vi">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +11,7 @@
       margin: 20px;
       background-color: #f8f9fa;
     }
+
     .header {
       display: flex;
       justify-content: space-between;
@@ -18,26 +20,30 @@
       background-color: white;
       border-bottom: 2px solid #ccc;
     }
+
     .container {
       max-width: 600px;
       margin: 20px auto;
       background-color: white;
       padding: 20px;
       border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     }
+
     .screen {
       background: #ccc;
       text-align: center;
       padding: 5px;
       margin-bottom: 10px;
     }
+
     .seats {
       display: grid;
       grid-template-columns: repeat(10, 1fr);
       gap: 5px;
       margin-bottom: 20px;
     }
+
     .seat {
       width: 35px;
       height: 35px;
@@ -49,25 +55,30 @@
       cursor: pointer;
       transition: 0.2s;
     }
+
     .seat.vip {
       background-color: #ffd700;
     }
+
     .seat.sold {
       background-color: #999;
       pointer-events: none;
       cursor: not-allowed;
     }
+
     .seat.selected {
       background-color: #28a745 !important;
       color: white;
       font-weight: bold;
     }
+
     .order-summary {
       display: flex;
       justify-content: space-between;
       align-items: center;
       font-size: 18px;
     }
+
     .btn {
       background-color: #001f3f;
       color: white;
@@ -76,13 +87,29 @@
       border-radius: 5px;
       cursor: pointer;
     }
+
+    .movie-info {
+      margin-bottom: 20px;
+      padding: 10px;
+      background-color: #f1f1f1;
+      border-left: 5px solid #001f3f;
+      border-radius: 5px;
+      font-size: 16px;
+    }
   </style>
 </head>
+
 <body>
+  
   <div class="header">
     <h3>Chọn ghế</h3>
     <h3>Thanh toán</h3>
   </div>
+  <div class="movie-info">
+    <p><strong>Phim:</strong> <span id="movieTitle">-</span></p>
+    <p><strong>Suất chiếu:</strong> <span id="showTime">-</span></p>
+  </div>
+
   <div class="container">
     <div class="screen">MÀN HÌNH</div>
     <div class="seats" id="seats"></div>
@@ -93,6 +120,12 @@
   </div>
 
   <script>
+    // Hiển thị tên phim và suất chiếu từ localStorage
+    const movieTitle = localStorage.getItem("movieTitle") || "Chưa chọn";
+    const showTime = localStorage.getItem("showTime") || "Chưa chọn";
+    document.getElementById("movieTitle").textContent = movieTitle;
+    document.getElementById("showTime").textContent = showTime;
+
     const seatContainer = document.getElementById("seats");
     const totalDisplay = document.getElementById("total");
     const rows = ['A', 'B', 'C', 'D', 'E'];
@@ -153,4 +186,5 @@
     });
   </script>
 </body>
+
 </html>
