--- a/Frontend/News1/new1.html
+++ b/Frontend/News1/new1.html
@@ -1,28 +1,61 @@
 <!DOCTYPE html>
 <html lang="vi">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tin tức phim</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
   <link rel="stylesheet" href="new1.css">
 </head>
+
 <body>
+  <!-- Header -->
+  <header class="header">
+    <div class="header__nav__wp">
+      <div class="navbar">
+        <div class="nav__items" style="color: #c86877;">Lotto</div>
+
+        <div class="nav__items dropdown">
+          <a href="#" class="nav__items-link">Tin tức</a>
+          <div class="dropdown-content">
+            <a href="..\News1\new1.html">Tin điện ảnh</a>
+            <a href="..\News2\new2.html">Đánh giá phim</a>
+          </div>
+        </div>
+
+
+
+        <div class="nav__items"><a href="../Checkout/book.html" class="nav__items-link">Thanh Toán</a>
+        </div>
+        <div class="nav__logo"></div>
+        <div class="nav__search">
+          <i class="nav__search-icon fa-solid fa-magnifying-glass"></i>
+          <input type="search" class="nav__search-items" placeholder="Tu khoa tim kiem">
+        </div>
+      </div>
+      <div class="nav__login">
+        <i class="fa-regular fa-user nav__login-icon"></i>
+        <a href="..\Sign up\giaodien.html" class="nav__login-txt">Login</a>
+      </div>
+    </div>
+  </header>
   <div class="container">
     <div class="main-content">
       <div class="right">
-    <div class="menu">
-        <h3>Đánh giá phim</h3>
-        <p>Góc nhìn chân thực, khách quan nhất về các bộ phim</p>
-    </div>
-    <div class="menu">
-        <h3>Tin điện ảnh</h3>
-        <p>Tin tức điện ảnh Việt Nam & thế giới</p>
-    </div>
-    <div class="menu">
-        <h3>Video - Trailer</h3>
-        <p>Trailer, video những phim chiếu rạp và truyền hình hot nhất</p>
-    </div>
-</div>
+        <div class="menu">
+          <h3>Đánh giá phim</h3>
+          <p>Góc nhìn chân thực, khách quan nhất về các bộ phim</p>
+        </div>
+        <div class="menu">
+          <h3>Tin điện ảnh</h3>
+          <p>Tin tức điện ảnh Việt Nam & thế giới</p>
+        </div>
+        <div class="menu">
+          <h3>Video - Trailer</h3>
+          <p>Trailer, video những phim chiếu rạp và truyền hình hot nhất</p>
+        </div>
+      </div>
 
       <h2>Mới nhất</h2>
 
@@ -46,7 +79,7 @@
       </div>
 
       <div class="news-item">
-       <img src="TGDQ.jpg.jpg" alt="Thanh Gươm Diệt Quỷ">
+        <img src="TGDQ.jpg.jpg" alt="Thanh Gươm Diệt Quỷ">
 
         <div class="text">
           <h3>Thanh Gươm Diệt Quỷ: Vô Hạn Thành mở suất chiếu sớm tại Việt Nam từ 14.08.2025</h3>
@@ -66,4 +99,5 @@
     </div>
   </div>
 </body>
+
 </html>
