--- a/Frontend/News2/new2.html
+++ b/Frontend/News2/new2.html
@@ -4,10 +4,41 @@
 <head>
     <meta charset="UTF-8">
     <title>Review Phim</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
     <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
+    <!-- Header -->
+    <header class="header">
+        <div class="header__nav__wp">
+            <div class="navbar">
+                <div class="nav__items" style="color: #c86877;">Lotto</div>
+
+                <div class="nav__items dropdown">
+                    <a href="#" class="nav__items-link">Tin tức</a>
+                    <div class="dropdown-content">
+                        <a href="..\News1\new1.html">Tin điện ảnh</a>
+                        <a href="..\News2\new2.html">Đánh giá phim</a>
+                    </div>
+                </div>
+
+
+
+                <div class="nav__items"><a href="../Checkout/book.html" class="nav__items-link">Thanh Toán</a>
+                </div>
+                <div class="nav__logo"></div>
+                <div class="nav__search">
+                    <i class="nav__search-icon fa-solid fa-magnifying-glass"></i>
+                    <input type="search" class="nav__search-items" placeholder="Tu khoa tim kiem">
+                </div>
+            </div>
+            <div class="nav__login">
+                <i class="fa-regular fa-user nav__login-icon"></i>
+                <a href="..\Sign up\giaodien.html" class="nav__login-txt">Login</a>
+            </div>
+        </div>
+    </header>
     <div class="container">
         <div class="main-content">
             <h2>Mới Nhất</h2>
