--- a/Frontend/Homepage/index.html
+++ b/Frontend/Homepage/index.html
@@ -43,47 +43,63 @@
     </header>
     <!-- Body -->
     <div class="app">
-        <!-- Mua ve theo phim -->
+        <!-- Phim Đang chiếu -->
         <div class="app__movies">
-            <h1 class="app__movies-title">Mua Ve Theo Phim</h1>
+            <h1 class="app__movies-title">Phim Đang Chiếu</h1>
             <div class="app__movies-wp">
                 <div class="app__movies-items">
-                    <img src="..\img\movies1.jpg" alt="movies 1" class="app__movies-items-img">
-                    <a href="" class="app__movies-items-link">
-                        <button class="app__movies-items-btn">Mua Ve</button></a>
-                </div>
-                <div class="app__movies-items">
-                    <img src="..\img\movies2.jpg" alt="movies" class="app__movies-items-img">
-                    <a href="" class="app__movies-items-link"><button class="app__movies-items-btn">Mua Ve</button></a>
+                    <img src="..\img\movies1.jpg" alt="Phim 1" class="app__movies-items-img">
                     <div class="app__movies-items-dec">
-                        <a href="" class="app__movies-items-title-link">
-                            <h3 class="app__movies-items-title">Mang Me Di Bo</h3>
+                        <h3 class="app__movies-items-title">Đào, Phở và Piano</h3>
+                        <a href="#cinema-section" class="app__movies-items-link">
+                            <button class="app__movies-items-btn">Mua Vé</button>
                         </a>
                     </div>
                 </div>
                 <div class="app__movies-items">
-                    <img src="..\img\movies2.jpg" alt="movies" class="app__movies-items-img">
-                    <a href="" class="app__movies-items-link"><button class="app__movies-items-btn">Mua Ve</button></a>
+                    <img src="..\img\movies2.jpg" alt="Phim 2" class="app__movies-items-img">
+                    <div class="app__movies-items-dec">
+                        <h3 class="app__movies-items-title">Mai</h3>
+                        <a href="#cinema-section" class="app__movies-items-link">
+                            <button class="app__movies-items-btn">Mua Vé</button>
+                        </a>
+                    </div>
                 </div>
                 <div class="app__movies-items">
-                    <img src="..\img\movies2.jpg" alt="movies" class="app__movies-items-img">
-                    <a href="" class="app__movies-items-link"><button class="app__movies-items-btn">Mua Ve</button></a>
+                    <img src="..\img\movies2.jpg" alt="Phim 3" class="app__movies-items-img">
+                    <div class="app__movies-items-dec">
+                        <h3 class="app__movies-items-title">Lật Mặt 7</h3>
+                        <a href="#cinema-section" class="app__movies-items-link">
+                            <button class="app__movies-items-btn">Mua Vé</button>
+                        </a>
+                    </div>
                 </div>
                 <div class="app__movies-items">
-                    <img src="..\img\movies2.jpg" alt="movies" class="app__movies-items-img">
-                    <a href="" class="app__movies-items-link"><button class="app__movies-items-btn">Mua Ve</button></a>
+                    <img src="..\img\movies2.jpg" alt="Phim 4" class="app__movies-items-img">
+                    <div class="app__movies-items-dec">
+                        <h3 class="app__movies-items-title">Fast & Furious 10</h3>
+                        <a href="#cinema-section" class="app__movies-items-link">
+                            <button class="app__movies-items-btn">Mua Vé</button>
+                        </a>
+                    </div>
                 </div>
                 <div class="app__movies-items">
-                    <img src="..\img\movies2.jpg" alt="movies" class="app__movies-items-img">
-                    <a href="" class="app__movies-items-link"><button class="app__movies-items-btn">Mua Ve</button></a>
+                    <img src="..\img\movies2.jpg" alt="Phim 5" class="app__movies-items-img">
+                    <div class="app__movies-items-dec">
+                        <h3 class="app__movies-items-title">Dune: Part Two</h3>
+                        <a href="#cinema-section" class="app__movies-items-link">
+                            <button class="app__movies-items-btn ">Mua Vé</button>
+                        </a>
+                    </div>
                 </div>
                 <div class="app__movies-items">
-                    <img src="..\img\movies2.jpg" alt="movies" class="app__movies-items-img">
-                    <a href="" class="app__movies-items-link"><button class="app__movies-items-btn">Mua Ve</button></a>
-                </div>
-                <div class="app__movies-items">
-                    <img src="..\img\movies2.jpg" alt="movies" class="app__movies-items-img">
-                    <a href="" class="app__movies-items-link"><button class="app__movies-items-btn">Mua Ve</button></a>
+                    <img src="..\img\movies2.jpg" alt="Phim 6" class="app__movies-items-img">
+                    <div class="app__movies-items-dec">
+                        <h3 class="app__movies-items-title">Avatar 2</h3>
+                        <a href="#cinema-section" class="app__movies-items-link">
+                            <button class="app__movies-items-btn">Mua Vé</button>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -97,19 +113,30 @@
                     <ul class="app__cinema-location-list">
                         <div class="app__cinema-location-list-wp">
                             <li class="app__cinema-location-list-items">Tp.Ho Chi Minh</li>
-                            <li class="app__cinema-location-list-items">Ha Noi</li>
-                            <li class="app__cinema-location-list-items">Tien Giang</li>
                         </div>
                     </ul>
                 </div>
                 <!-- Rap phim -->
-                <div class="app__cinema-item">
+                <div class="app__cinema-item " id="cinema-section">
                     <h3 class="app__cinema-item-title">CGV</h3>
                     <ul class="app__cinema-item-list">
                         <div class="app__cinema-item-list-wp">
-                            <li class="app__cinema-item-list-items ">Ung Van Khiem</li>
-                            <li class="app__cinema-item-list-items ">Bui Dinh Tuy</li>
-                            <li class="app__cinema-item-list-items ">Quang Trung</li>
+                            <li class="app__cinema-item-list-items" data-cinema="CGV Ung Van Khiem"
+                                data-address="Tầng 5 - 123 Ung Văn Khiêm, Bình Thạnh, Tp.HCM">
+                                Ung Van Khiem
+                            </li>
+
+                            <li class="app__cinema-item-list-items" data-cinema="CGV Bui Dinh Tuy"
+                                data-address="Lầu 3 - 456 Bùi Đình Tuý, Bình Thạnh, Tp.HCM">
+                                Bui Dinh Tuy
+                            </li>
+
+                            <li class="app__cinema-item-list-items" data-cinema="CGV Quang Trung"
+                                data-address="Lầu 4 - 789 Quang Trung, Gò Vấp, Tp.HCM">
+                                Quang Trung
+                            </li>
+
+
                         </div>
                     </ul>
                 </div>
@@ -198,107 +225,7 @@
     <!--Footer-->
     <div class="footer__wp"></div>
     <!--Script-->
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            const locationItems = document.querySelectorAll('.app__cinema-location-list-items');
-            const cinemaItem = document.querySelector('.app__cinema-item');
-            const calendar = document.querySelector('.app__calender');
-            const cinemaListItems = document.querySelectorAll('.app__cinema-item-list-items');
-
-            // Ẩn rạp & lịch chiếu ban đầu
-            cinemaItem.style.display = 'none';
-            calendar.style.display = 'none';
-
-            // Click vào khu vực
-            locationItems.forEach(location => {
-                location.addEventListener('click', function () {
-                    // Bỏ active các khu vực khác
-                    locationItems.forEach(i => i.classList.remove('active'));
-                    this.classList.add('active');
-
-                    // Hiện rạp, ẩn lịch
-                    cinemaItem.style.display = 'block';
-                    calendar.style.display = 'none';
-
-                    // Bỏ chọn rạp trước đó
-                    cinemaListItems.forEach(i => i.classList.remove('active'));
-                });
-            });
-
-            // Click vào rạp
-            cinemaListItems.forEach(cinema => {
-                cinema.addEventListener('click', function () {
-                    // Bỏ active các rạp khác
-                    cinemaListItems.forEach(i => i.classList.remove('active'));
-                    this.classList.add('active');
-
-                    // Hiện lịch chiếu
-                    calendar.style.display = 'block';
-                });
-            });
-            //Click vao time
-            const timeSlots = document.querySelectorAll('.app__calender-items-time');
-
-            timeSlots.forEach(slot => {
-                slot.addEventListener('click', function () {
-                    // Bỏ active tất cả
-                    timeSlots.forEach(i => i.classList.remove('active'));
-                    // Gán active cho cái được click
-                    this.classList.add('active');
-
-                    // Lưu tên phim
-                    const movieTitle = document.querySelector('.app__calender-items-title')?.textContent.trim() || '';
-
-                    // Lưu suất chiếu (thời gian + ngày)
-                    const showDate = document.querySelector('.app__calender-title-date-date')?.textContent.trim() || '';
-                    const showTime = this.textContent.trim(); // ví dụ: "13:00"
-
-                    localStorage.setItem("movieTitle", movieTitle);
-                    localStorage.setItem("showTime", `${showDate} - ${showTime}`);
-
-                    // Điều hướng đến trang chọn ghế
-                    window.location.href = '../Checkout/book.html';
-                });
-            });
-
-
-            // Các phần cần ẩn
-            const dateItems = document.querySelectorAll('.app__calender-date-items');
-            const note = document.querySelector('.app__calender-note');
-            const title = document.querySelector('.app__calender-title');
-            const item = document.querySelector('.app__calender-item');
-            const dateTextEl = document.querySelector('.app__calender-title-date-date');
-
-            // Mảng thứ
-            const days = ['Chủ Nhật', 'Thứ 2', 'Thứ 3', 'Thứ 4', 'Thứ 5', 'Thứ 6', 'Thứ 7'];
-
-            dateItems.forEach(date => {
-                date.addEventListener('click', function () {
-                    // Bỏ active các ngày khác
-                    dateItems.forEach(i => i.classList.remove('active'));
-                    this.classList.add('active');
-
-                    // Hiện phần bên dưới
-                    note.style.display = 'block';
-                    title.style.display = 'block';
-                    item.style.display = 'flex';
-
-                    // Lấy ngày từ text (VD: "06/8") và tạo Date object
-                    const dayMonth = this.textContent.trim().split('/');
-                    const day = parseInt(dayMonth[0]);
-                    const month = parseInt(dayMonth[1]) - 1; // Tháng JS bắt đầu từ 0
-                    const year = 2025;
-
-                    const dateObj = new Date(year, month, day);
-                    const weekday = days[dateObj.getDay()];
-
-                    // Định dạng ngày để hiển thị
-                    const fullText = `${weekday}, ${day.toString().padStart(2, '0')}/${(month + 1).toString().padStart(2, '0')}/${year}`;
-                    dateTextEl.textContent = fullText;
-                });
-            });
-
-        });
+    <script src="main.js">
     </script>
 
 
