--- a/Frontend/News1/new1.html
+++ b/Frontend/News1/new1.html
@@ -4,65 +4,66 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tin tức phim</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="new1.css">
 </head>
 <body>
   <div class="container">
     <div class="main-content">
-      <div class="right">
-    <div class="menu">
-        <h3>Đánh giá phim</h3>
-        <p>Góc nhìn chân thực, khách quan nhất về các bộ phim</p>
-    </div>
-    <div class="menu">
-        <h3>Tin điện ảnh</h3>
-        <p>Tin tức điện ảnh Việt Nam & thế giới</p>
-    </div>
-    <div class="menu">
-        <h3>Video - Trailer</h3>
-        <p>Trailer, video những phim chiếu rạp và truyền hình hot nhất</p>
-    </div>
-</div>
-
       <h2>Mới nhất</h2>
 
       <div class="news-item">
-        <img src="MangMeDB.jpg.jpg" alt="Mang Mẹ Đi Bỏ">
-        <div class="text">
-          <h3>Mang Mẹ Đi Bỏ – Phim gia đình có doanh thu mở màn kỷ lục năm 2025 chỉ đứng sau Bộ Tứ Báo Thù</h3>
-          <p class="meta">Moveek · 7 giờ trước</p>
-          <p class="desc">Mang Mẹ Đi Bỏ đạt 78 tỷ đồng doanh thu... mạnh mẽ tại phòng vé Việt.</p>
+      <img src="img1/MangMeDB.jpg.jpg" alt="Mang Mẹ Đi Bỏ">
+
+        <div class="info">
+          <h3>Mang Mẹ Đi Bỏ phim Gia đình có doanh thu kỉ lục năm 2025 sau Bộ Tứ Báo Thủ</h3>
+          <p><strong>Moveek</strong> · 7 giờ trước</p>
+          <p>Mang Mẹ Đi Bỏ 78 tỷ đồng doanh thu... mạnh mẽ tại phòng vé Việt.</p>
         </div>
       </div>
 
       <div class="news-item">
-        <img src="Muado.jpg.jpg" alt="Mưa Đỏ">
+      <img src="img1/Muado.jpg.jpg" alt="Mưa Đỏ">
 
-        <div class="text">
+
+        <div class="info">
           <h3>Mưa Đỏ – Khúc tráng ca bi hùng về Thành cổ Quảng Trị trên màn ảnh rộng</h3>
-          <p class="meta">miduynph · 8 giờ trước</p>
-          <p class="desc">Phim điện ảnh Mưa Đỏ tái hiện 81 ngày đêm bi tráng... của người lính.</p>
+          <p><strong>miduynh</strong> · 8 giờ trước</p>
+          <p>Phim điện ảnh Mưa Đỏ tái hiện 81 ngày đêm bi tráng... của người lính.</p>
         </div>
       </div>
 
       <div class="news-item">
-       <img src="TGDQ.jpg.jpg" alt="Thanh Gươm Diệt Quỷ">
+        <img src="img1/TGDQ.jpg.jpg"  alt="Thanh Gươm Diệt Quỷ">
 
-        <div class="text">
+
+        <div class="info">
           <h3>Thanh Gươm Diệt Quỷ: Vô Hạn Thành mở suất chiếu sớm tại Việt Nam từ 14.08.2025</h3>
-          <p class="meta">Moveek · 2 ngày trước</p>
-          <p class="desc">Thanh Gươm Diệt Quỷ: Vô Hạn Thành sẽ chiếu sớm... điện ảnh đậm sắc.</p>
-        </div>
+          <p><strong>Moveek</strong> · 2 ngày trước</p>
+          <p>Thanh Gươm Diệt Quỷ: Vô Hạn Thành sẽ chiếu sớm... điện ảnh đậm sắc.</p>
+        </div>2
       </div>
     </div>
 
-    <div class="sidebar">
-      <h2>Chuyên mục</h2>
-      <ul>
-        <li><a href="#">Đánh giá phim</a></li>
-        <li><a href="#">Tin điện ảnh</a></li>
-        <li><a href="#">Video – Trailer</a></li>
-      </ul>
+    <div class="right">
+      <div class="menu">
+  <h3>Chuyên Mục</h3>
+  <ul>
+   
+</div>
+
+      <div class="menu">
+        <h3>Đánh giá phim</h3>
+        <p>Góc nhìn chân thực, khách quan nhất về các bộ phim</p>
+      </div>
+      
+      <div class="menu">
+        <h3>Tin điện ảnh</h3>
+        <p>Tin tức điện ảnh Việt Nam & thế giới</p>
+      </div>
+      <div class="menu">
+        <h3>Video - Trailer</h3>
+        <p>Trailer, video những phim chiếu rạp và truyền hình hot nhất</p>
+      </div>
     </div>
   </div>
 </body>
