--- a/Frontend/Admin/admin.html
+++ b/Frontend/Admin/admin.html
@@ -398,6 +398,7 @@
             </div>
         </div>
     </div>
+    <a href="..\Homepage\index.html">HomePage</a>
 
     <script src="main.js"></script>
     <script src="phimanh.js"></script>
