--- a/Frontend/Homepage/index.html
+++ b/Frontend/Homepage/index.html
@@ -211,11 +211,8 @@
                                 </div>
                             </div>
                         </div>
-
-
-
                     </div>
-
+                    <!-- END -->
                 </div>
             </div>
         </div>
@@ -223,7 +220,9 @@
     </div>
 
     <!--Footer-->
-    <div class="footer__wp"></div>
+    <div class="footer__wp">
+        <a href="..\Admin\admin.html"> Admin</a>
+    </div>
     <!--Script-->
     <script src="main.js">
     </script>
