--- a/Frontend/News1/new1.html
+++ b/Frontend/News1/new1.html
@@ -5,10 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tin tức phim</title>
-<<<<<<< HEAD
-=======
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
->>>>>>> 5d86378a8007d3504e3701c5a0c9fffd6f9bc5e3
+
   <link rel="stylesheet" href="new1.css">
 </head>
 
@@ -45,24 +42,7 @@
   </header>
   <div class="container">
     <div class="main-content">
-<<<<<<< HEAD
-=======
-      <div class="right">
-        <div class="menu">
-          <h3>Đánh giá phim</h3>
-          <p>Góc nhìn chân thực, khách quan nhất về các bộ phim</p>
-        </div>
-        <div class="menu">
-          <h3>Tin điện ảnh</h3>
-          <p>Tin tức điện ảnh Việt Nam & thế giới</p>
-        </div>
-        <div class="menu">
-          <h3>Video - Trailer</h3>
-          <p>Trailer, video những phim chiếu rạp và truyền hình hot nhất</p>
-        </div>
-      </div>
 
->>>>>>> 5d86378a8007d3504e3701c5a0c9fffd6f9bc5e3
       <h2>Mới nhất</h2>
 
       <div class="news-item">
@@ -71,7 +51,7 @@
         <div class="info">
           <h3>Mang Mẹ Đi Bỏ phim Gia đình có doanh thu kỉ lục năm 2025 sau Bộ Tứ Báo Thủ</h3>
           <p><strong>Moveek</strong> · 7 giờ trước</p>
-          <p>Mang Mẹ Đi Bỏ 78 tỷ đồng doanh thu... mạnh mẽ tại phòng vé Việt.</p>
+          <p>Mang Mẹ Đi Bỏ 78 tỷ đồng doanh thu, lọt top phim Việt mở màn cao nhất 2025.Phim gia đình đang chứng minh sức hút mạnh mẽ tại phòng vé Việt.</p>
         </div>
       </div>
 
@@ -81,23 +61,18 @@
 
         <div class="info">
           <h3>Mưa Đỏ – Khúc tráng ca bi hùng về Thành cổ Quảng Trị trên màn ảnh rộng</h3>
-          <p><strong>miduynh</strong> · 8 giờ trước</p>
-          <p>Phim điện ảnh Mưa Đỏ tái hiện 81 ngày đêm bi tráng... của người lính.</p>
+          <p><strong>miduynph</strong> · 8 giờ trước</p>
+          <p>Phim điện ảnh Mưa Đỏ tái hiện 81 ngày đêm bi tráng ở Thành Cổ Quảng Trị,là bản tráng ca xúc động về tinh thần bất khuất của người lính.</p>
         </div>
       </div>
 
       <div class="news-item">
-<<<<<<< HEAD
         <img src="img1/TGDQ.jpg.jpg"  alt="Thanh Gươm Diệt Quỷ">
-=======
-        <img src="TGDQ.jpg.jpg" alt="Thanh Gươm Diệt Quỷ">
->>>>>>> 5d86378a8007d3504e3701c5a0c9fffd6f9bc5e3
-
 
         <div class="info">
           <h3>Thanh Gươm Diệt Quỷ: Vô Hạn Thành mở suất chiếu sớm tại Việt Nam từ 14.08.2025</h3>
           <p><strong>Moveek</strong> · 2 ngày trước</p>
-          <p>Thanh Gươm Diệt Quỷ: Vô Hạn Thành sẽ chiếu sớm... điện ảnh đậm sắc.</p>
+          <p>Thanh Gươm Diệt Quỷ: Vô Hạn Thành sẽ chiếu sớm từ sau 18h ngày 14.08.2025,chính thức ra rạp ngày 15.08.Cập nhật thông tin phim,kỷ lục phòng vé,hậu trường sản xuất và dàn phản diện đình đám.</p>
         </div>2
       </div>
     </div>
@@ -109,7 +84,7 @@
    
 </div>
 
-      <div class="menu">
+<div class="menu">
         <h3>Đánh giá phim</h3>
         <p>Góc nhìn chân thực, khách quan nhất về các bộ phim</p>
       </div>
