--- a/Frontend/Admin/admin.html
+++ b/Frontend/Admin/admin.html
@@ -221,47 +221,68 @@
             </div>
 
             <div class="content-section" id="taikhoan">
-                <h1 class="text-4xl font-extrabold text-gray-900 mb-10 border-b-2 pb-4">Quản lí Tài khoản</h1>
+                <h1 class="text-4xl font-extrabold text-gray-900 mb-10 border-b-2 pb-4">Quản lí Đăng Nhập</h1>
                 <div class="flex flex-col lg:flex-row gap-8">
+
+                    <!-- Form Đăng ký -->
                     <div class="bg-white p-8 rounded-xl shadow-lg flex-1">
-                        <h2 class="text-2xl font-semibold mb-6 border-b pb-2">Thêm tài khoản mới</h2>
-                        <form id="add-account-form" class="space-y-4">
+                        <h2 class="text-2xl font-semibold mb-6 border-b pb-2">Đăng Ký Tài Khoản</h2>
+                        <form id="register-form" class="space-y-4">
                             <div>
-                                <label for="username" class="block font-medium text-gray-700">Tên đăng nhập</label>
-                                <input type="text" id="username"
-                                    class="w-full mt-1 p-3 border rounded-lg focus:ring-2 focus:ring-blue-500"
+                                <label for="fullname" class="block font-medium text-gray-700">Họ và Tên</label>
+                                <input type="text" id="fullname" class="w-full mt-1 p-3 border rounded-lg"
+                                    placeholder="Nhập họ và tên" required>
+                            </div>
+                            <div>
+                                <label for="gender" class="block font-medium text-gray-700">Giới tính</label>
+                                <select id="gender" class="w-full mt-1 p-3 border rounded-lg" required>
+                                    <option value="">-- Chọn giới tính --</option>
+                                    <option value="Nam">Nam</option>
+                                    <option value="Nữ">Nữ</option>
+                                    <option value="Khác">Khác</option>
+                                </select>
+                            </div>
+                            <div>
+                                <label for="phone" class="block font-medium text-gray-700">Số điện thoại</label>
+                                <input type="text" id="phone" class="w-full mt-1 p-3 border rounded-lg"
+                                    placeholder="Nhập số điện thoại" required>
+                            </div>
+                            <div>
+                                <label for="username" class="block font-medium text-gray-700">Tài khoản</label>
+                                <input type="text" id="username" class="w-full mt-1 p-3 border rounded-lg"
                                     placeholder="Nhập tên đăng nhập" required>
                             </div>
                             <div>
                                 <label for="password" class="block font-medium text-gray-700">Mật khẩu</label>
-                                <input type="password" id="password"
-                                    class="w-full mt-1 p-3 border rounded-lg focus:ring-2 focus:ring-blue-500"
+                                <input type="password" id="password" class="w-full mt-1 p-3 border rounded-lg"
                                     placeholder="Nhập mật khẩu" required>
                             </div>
                             <div>
-                                <label for="role" class="block font-medium text-gray-700">Phân quyền</label>
-                                <select id="role"
-                                    class="w-full mt-1 p-3 border rounded-lg focus:ring-2 focus:ring-blue-500" required>
-                                    <option value="user">Người dùng</option>
-                                    <option value="admin">Quản trị viên</option>
-                                </select>
+                                <label for="confirmPassword" class="block font-medium text-gray-700">Xác nhận mật
+                                    khẩu</label>
+                                <input type="password" id="confirmPassword" class="w-full mt-1 p-3 border rounded-lg"
+                                    placeholder="Nhập lại mật khẩu" required>
                             </div>
                             <div class="flex justify-end">
                                 <button type="submit"
-                                    class="bg-blue-500 text-white font-bold py-3 px-8 rounded-lg shadow-md hover:bg-blue-600 transition-colors duration-200">Thêm
-                                    tài khoản</button>
+                                    class="bg-blue-500 text-white font-bold py-3 px-8 rounded-lg shadow-md hover:bg-blue-600 transition-colors duration-200">
+                                    Đăng Ký
+                                </button>
                             </div>
                         </form>
                     </div>
+
+                    <!-- Danh sách tài khoản -->
                     <div class="bg-white p-8 rounded-xl shadow-lg flex-1">
                         <h2 class="text-2xl font-semibold mb-6 border-b pb-2">Danh sách tài khoản</h2>
                         <div class="overflow-x-auto">
                             <table class="w-full text-sm text-left text-gray-500">
                                 <thead class="text-xs text-gray-700 uppercase bg-gray-50">
                                     <tr>
-                                        <th scope="col" class="py-3 px-6">Tên đăng nhập</th>
-                                        <th scope="col" class="py-3 px-6">Phân quyền</th>
-                                        <th scope="col" class="py-3 px-6">Hành động</th>
+                                        <th class="py-3 px-6">Họ tên</th>
+                                        <th class="py-3 px-6">Mật Khẩu</th>
+                                        <th class="py-3 px-6">Số điện thoại</th>
+                                        <th class="py-3 px-6">Tài khoản</th>
                                     </tr>
                                 </thead>
                                 <tbody id="account-list" class="divide-y divide-gray-200"></tbody>
